--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "router": "^1.3.8",
     "schema": "^0.2.1"
   },
-  "name": "hall-booking",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
