--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "router": "^1.3.8",
+    "nodemon": "^2.0.22",
     "schema": "^0.2.1"
   },
   "name": "backend",
